# Portunus

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  README.zh-CN.md  TEST-REPORT.md  analyze_commits.py  check_prs.py  check_work_hours.py  edge-01.bundle.json  railway.json
crates/forward-auth/: Cargo.toml
crates/forward-auth/src/: file_store.rs  lib.rs  operator_store.rs  store_types.rs  token.rs
crates/forward-auth/tests/: proptest_store.rs
crates/forward-client/: Cargo.toml
crates/forward-client/benches/: data_plane.rs  dns_resolver.rs  range_install.rs  sni_route.rs  udp_data_plane.rs
crates/forward-client/benches/baselines/: v0.1.0.json  v0.7.0.json
crates/forward-client/src/: bundle.rs  control.rs  main.rs  pinned_verifier.rs  port_groups.rs  shutdown.rs
crates/forward-client/src/forwarder/: failover.rs  failover_path.rs  mod.rs  probe.rs  proxy.rs  proxy_protocol.rs  range.rs  stats.rs
crates/forward-client/src/resolver/: cache.rs  mod.rs  test_support.rs
crates/forward-core/: Cargo.toml
crates/forward-core/src/: config.rs  error.rs  fingerprint.rs  hostname.rs  lib.rs  log_redact.rs  peek_histogram.rs  port_range.rs  rate_limit.rs  rule_target.rs  target.rs
crates/forward-core/tests/: rate_limit_validation.rs  rule_target_validation.rs
crates/forward-e2e/: Cargo.toml  edge-000.bundle.json  edge-001.bundle.json  edge-002.bundle.json  edge-003.bundle.json  edge-004.bundle.json  edge-005.bundle.json  edge-006.bundle.json  edge-007.bundle.json  edge-008.bundle.json  edge-009.bundle.json  edge-01.bundle.json  edge-010.bundle.json  edge-011.bundle.json  edge-012.bundle.json  edge-013.bundle.json  edge-014.bundle.json  edge-015.bundle.json  edge-016.bundle.json  edge-017.bundle.json  edge-018.bundle.json  edge-019.bundle.json  edge-02.bundle.json  edge-020.bundle.json  edge-021.bundle.json  edge-022.bundle.json  edge-023.bundle.json  edge-024.bundle.json  edge-025.bundle.json  edge-026.bundle.json  edge-027.bundle.json  edge-028.bundle.json  edge-029.bundle.json  edge-030.bundle.json  edge-031.bundle.json  edge-032.bundle.json  edge-033.bundle.json  edge-034.bundle.json  edge-035.bundle.json  edge-036.bundle.json  (+67 more)
crates/forward-e2e/src/: lib.rs
crates/forward-e2e/tests/: audit_persists_e2e.rs  dns_smoke.rs  happy_path.rs  identity_cli_smoke.rs  multi_target_cli_wire_through.rs  multi_target_passive_failover.rs  multi_target_recovery.rs  multi_target_unchanged.rs  observability.rs  proxy_protocol_persistence.rs  range_smoke.rs  rbac_smoke.rs  restart_recovery.rs  rule_failure_lifecycle.rs  smoke.rs  udp_smoke.rs
crates/forward-e2e/tests/common/: mod.rs
crates/forward-server/: Cargo.toml  build.rs
crates/forward-server/benches/: operator_api.rs
crates/forward-server/src/: bundle.rs  clients.rs  data_dir.rs  lib.rs  main.rs  metrics.rs  owner.rs  rules.rs  serve.rs  state.rs  tls.rs
crates/forward-server/tests/: audit_contract.rs  audit_log_redaction.rs  audit_overflow_drop.rs  audit_persists_across_restart.rs  audit_persists_kill_restart.rs  audit_query_scaling.rs  audit_v07_array_root.rs  audit_v08_envelope.rs  bootstrap_superadmin.rs  cli_audit_prune.rs  cli_backup_restore_reset.rs  cli_push_rule.rs  credential_rotate_self_service.rs  embed_smoke.rs  grant_lookup_timing.rs  http_credentials_contract.rs  http_grants_contract.rs  http_users_contract.rs  identity_persistence.rs  legacy_no_auth_rejected.rs  metrics_cardinality.rs  operator_api_v07_compat.rs  provisioning.rs  push_rule_cli.rs  rate_limit_owner_contract.rs  rate_limit_rule_contract.rs  rbac_metric_cardinality.rs  rbac_push_rule.rs  rbac_read_filtering.rs  rule_stats_stream_contract.rs  rules_crud_sqlite.rs  rules_multi_target_contract.rs  rules_per_target_stats.rs  sni_audit_ring_isolation.rs  sni_metrics_surface.rs  sni_rule_contract.rs  store_schema_handshake.rs  users_me_contract.rs  v07_v08_wire_replay.rs
crates/portunus-auth/: Cargo.toml
crates/portunus-auth/src/: lib.rs  store_types.rs  token.rs
crates/portunus-client/: Cargo.toml
crates/portunus-client/benches/: data_plane.rs  range_install.rs  udp_data_plane.rs
crates/portunus-client/src/: bundle.rs  control.rs  enroll.rs  main.rs  port_groups.rs  shutdown.rs  tls.rs  wire.rs
crates/portunus-core/: Cargo.toml
crates/portunus-core/src/: config.rs  error.rs  fingerprint.rs  id.rs  lib.rs  log_redact.rs  peek_histogram.rs  protocol.rs  rate_limit.rs  rule_target.rs
crates/portunus-core/tests/: rate_limit_validation.rs  rule_target_validation.rs
crates/portunus-e2e/: Cargo.toml
crates/portunus-e2e/src/: lib.rs
crates/portunus-e2e/tests/: audit_persists_e2e.rs  auth_failures.rs  client_rename_live_session.rs  dns_smoke.rs  happy_path.rs  identity_cli_smoke.rs  legacy_client_reconnect.rs  multi_target_cli_wire_through.rs  multi_target_passive_failover.rs  multi_target_unchanged.rs  observability.rs  owner_connection_limit.rs  proxy_protocol_persistence.rs  range_smoke.rs  rbac_smoke.rs  scale.rs  smoke.rs  standalone_failover.rs  standalone_proxy_v2.rs  standalone_tcp_basic.rs  traffic_quotas.rs  udp_smoke.rs  upgrade_restart_idempotent.rs
crates/portunus-forwarder/: Cargo.toml
crates/portunus-forwarder/benches/: dns_resolver.rs  sni_route.rs  udp_data_plane.rs
crates/portunus-forwarder/src/: lib.rs
crates/portunus-proto/: Cargo.toml  build.rs
crates/portunus-proto/src/: lib.rs
crates/portunus-proto/tests/: dns_wire_compat.rs  enrollment_wire_compat.rs  protocol_conversion.rs  range_wire_compat.rs  rate_limit_wire_compat.rs  sni_wire_compat.rs  targets_wire_compat.rs  traffic_quota_smoke.rs  udp_wire_compat.rs
crates/portunus-standalone/: Cargo.toml
crates/portunus-standalone/contrib/: Dockerfile  README.md  docker-compose.yml  portunus-standalone.confd  portunus-standalone.openrc  portunus-standalone.service  portunus.example.toml
crates/portunus-standalone/src/: config.rs  lib.rs  main.rs  reporter.rs  runtime.rs  signal.rs
crates/portunus-standalone/tests/: check_mode.rs  smoke.rs  stats_once.rs  stats_server.rs
(+920 files in other folders)
