[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/ZingerLittleBee/forward-rs"
authors = ["forward-rs contributors"]
version = "0.6.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Pedantic lints that produce excessive false positives on this codebase:
# * `doc_markdown` flags every un-backticked identifier in long-form doc
#   comments (`prefer_ipv6=true`, `dns_failures`) — those reference
#   project-internal config keys/fields, not external crates needing
#   intra-doc links.
# * `items_after_statements` collides with the project's preferred test
#   layout (`use` for test-only imports deep inside `#[test]` blocks).
# * `ref_option` / `trivially_copy_pass_by_ref` clash with serde's
#   `serialize_with` signature, which forces `&Option<T>` / `&bool`
#   on the serializer.
doc_markdown = "allow"
items_after_statements = "allow"
ref_option = "allow"
trivially_copy_pass_by_ref = "allow"
# `needless_pass_by_value` would force every `Json(body)` axum handler
# to take `&serde_json::Value`, which fights axum's `FromRequest` impl.
needless_pass_by_value = "allow"
# `used_underscore_binding` flags intentional drop-guards (`_guard`,
# `_dir`) used to keep RAII state alive for the duration of a test.
used_underscore_binding = "allow"
# `too_many_lines` flags `serve::run` and `main::run` — both wire-up
# functions whose splitting would scatter the dependency graph.
too_many_lines = "allow"
# Operator-CLI URL building uses `format!` push idioms that are clearer
# than the suggested alternatives.
format_push_string = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "sync", "time", "macros", "io-util", "fs", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }

# gRPC stack (tonic 0.14 split: codegen → tonic-prost-build, runtime → tonic-prost)
tonic = { version = "0.14", features = ["transport", "tls-aws-lc"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"

# TLS
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rcgen = { version = "0.13", default-features = false, features = ["aws_lc_rs", "pem"] }

# Operator HTTP
axum = { version = "0.8", features = ["tokio", "macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Serde stack
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto / IDs
rand = { version = "0.8", features = ["std", "std_rng"] }
blake3 = "1"
sha2 = "0.10"
ulid = { version = "1", features = ["serde"] }

# Errors
thiserror = "1"

# Encoding / time
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
time = { version = "0.3", default-features = false, features = ["std"] }

# Metrics
prometheus = "0.13"

# Forward workspace crates
forward-proto = { path = "crates/forward-proto" }
forward-core = { path = "crates/forward-core" }
forward-auth = { path = "crates/forward-auth" }

# Dev dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"
assert_cmd = "2"
tokio-test = "0.4"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
panic = "abort"

[profile.bench]
debug = true
