[package]
name = "forward-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication seam (Constitution Principle I) for forward-rs."

[lints]
workspace = true

[dependencies]
forward-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
