[package]
name = "forward-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "forward-rs edge data-plane client binary."

[lints]
workspace = true

[[bin]]
name = "forward-client"
path = "src/main.rs"

[dependencies]
forward-core = { workspace = true }
forward-auth = { workspace = true }
forward-proto = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
rustls = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
assert_cmd = { workspace = true }
criterion = { workspace = true }
