[package]
name = "forward-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "forward-rs edge data-plane client binary."

[lints]
workspace = true

[[bin]]
name = "forward-client"
path = "src/main.rs"

[dependencies]
forward-core = { workspace = true }
forward-auth = { workspace = true }
forward-proto = { workspace = true }

# UDP forwarding (v0.4.0) uses `tokio::net::UdpSocket` from the existing `net` feature — no new dep.
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
rustls = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tokio-stream = { workspace = true }

# Async DNS resolver (system-resolv.conf, no DoT/DoH per v0.3.0 OOS).
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "system-config"] }
# `async fn` in trait still uses async-trait under the hood for trait
# objects (the resolver layer holds `Arc<R>` generically but tests use
# `dyn Resolve` indirectly through the trait, so we keep async-trait
# for forward-compat with the US2 single-flight wait machinery).
async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
assert_cmd = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "data_plane"
harness = false

[[bench]]
name = "range_install"
harness = false

[[bench]]
name = "dns_resolver"
harness = false

[[bench]]
name = "udp_data_plane"
harness = false

# 009-tls-sni-routing T005 (placeholder); T087/T088 land the real benches.
[[bench]]
name = "sni_route"
harness = false
