[package]
name = "forward-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Workspace-level end-to-end / contract tests for forward-rs."
publish = false

[lib]
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
forward-core = { workspace = true }
forward-auth = { workspace = true }
forward-proto = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
tokio-test = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
