[package]
name = "forward-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "forward-rs control-plane server binary."
build = "build.rs"

[lints]
workspace = true

[[bin]]
name = "forward-server"
path = "src/main.rs"

[dependencies]
forward-core = { workspace = true }
forward-auth = { workspace = true }
forward-proto = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prometheus = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tower = { version = "0.5", features = ["util"] }
ulid = { workspace = true }
# 006-management-web-ui T005: compile-time embed of webui/dist/.
rust-embed = { version = "8", features = ["compression", "include-exclude"] }
# 006-management-web-ui T025: SSE plumbing for /v1/rules/{id}/stats/stream.
futures = "0.3"
# 006-management-web-ui T063: serve embedded assets with correct
# Content-Type without hand-coding a MIME table.
mime_guess = "2"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
assert_cmd = { workspace = true }
