[package]
name = "portunus-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Portunus edge data-plane client binary."

[lints]
workspace = true

[[bin]]
name = "portunus-client"
path = "src/main.rs"

[dependencies]
portunus-core      = { workspace = true }
portunus-auth      = { workspace = true }
portunus-proto     = { workspace = true }
portunus-forwarder = { path = "../portunus-forwarder" }

# UDP forwarding (v0.4.0) uses `tokio::net::UdpSocket` from the existing `net` feature — no new dep.
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
rustls = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tokio-stream = { workspace = true }
# `async fn` in trait still uses async-trait under the hood for trait
# objects (the resolver layer holds `Arc<R>` generically but tests use
# `dyn Resolve` indirectly through the trait, so we keep async-trait
# for forward-compat with the US2 single-flight wait machinery).
async-trait = "0.1"
# Removed in v1.5.0: nix / hickory-resolver
# (data-plane uses moved to portunus-forwarder)

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
assert_cmd = { workspace = true }
