[package]
name = "portunus-standalone"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone TOML-driven TCP/UDP forwarder (no gRPC control plane)."

[lints]
workspace = true

[[bin]]
name = "portunus-standalone"
path = "src/main.rs"

[dependencies]
portunus-core      = { workspace = true }
portunus-forwarder = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }
toml               = { workspace = true }
blake3             = { workspace = true }
libc               = "0.2"

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile   = { workspace = true }
