[package]
name = "portunus-standalone"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone TOML-driven TCP/UDP forwarder (no gRPC control plane)."

[lints]
workspace = true

[features]
default   = ["stats-tui"]
stats-tui = ["dep:ratatui", "dep:crossterm"]

[[bin]]
name = "portunus-standalone"
path = "src/main.rs"

[dependencies]
portunus-core      = { workspace = true }
portunus-forwarder = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }
toml               = { workspace = true }
blake3             = { workspace = true }
libc               = "0.2"
serde_json         = { workspace = true }
ratatui            = { workspace = true, optional = true }
crossterm          = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd  = { workspace = true }
predicates  = { workspace = true }
tempfile    = { workspace = true }
